--- a/jesuransomfrancaise.html
+++ b/jesuransomfrancaise.html
@@ -383,7 +383,10 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <br><br>Car je suis convaincu que ni mort ni vie, ni anges ni gouvernements, ni choses présentes ni choses à venir, ni puissances, ni hauteur ni profondeur, ni aucune autre création ne pourra nous séparer de l’amour de Dieu qui est en Christ Jésus notre Seigneur.
 <br>
 <br>Romains 8:38, 39
-<br><br>Plus d'informations.<br>1 Jn 2:2 et 1 Jn 4:14<br>"Et il est la propitiation pour nos péchés: et pas seulement pour les nôtres, mais aussi pour les péchés du monde entier."<br>"Et nous avons vu et nous attestons que le Père a envoyé le Fils pour être le Sauveur du monde."<br>Selon le non de Stron. G2889 peut être compris dans le monde entier comme "les hôtes célestes".<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Dieu est amour.
+<br><br>Plus d'informations.<br>Première lettre de Jean.
+<br>2:2 ”Et il est un sacrifice de réconciliation pour nos péchés+, pas seulement pour les nôtres cependant, mais aussi pour ceux du monde entier.”
+<br>4:14 ”De plus, nous-mêmes nous avons vu et nous attestons que le Père a envoyé son Fils comme sauveur du monde.”
+<br><br>Selon le non de Stron. G2889 peut être compris dans le monde entier comme "les hôtes célestes".<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Dieu est amour.
 <br>
 <br>Aimez vous les uns les autres.
 <br><br>Vous souhaite à tous la paix, la paix et la liberté
