--- a/jesusransomgerman.html
+++ b/jesusransomgerman.html
@@ -383,7 +383,10 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <br><br>Denn ich bin überzeugt, daß weder Tod noch Leben, noch Engel, noch Regierungen, noch Gegenwärtiges, noch Zukünftiges, noch Mächte, noch Höhe, noch Tiefe, noch irgendeine andere Schöpfung imstande sein wird, uns von Gottes Liebe zu trennen, die in Christus Jesus ist, unserem Herrn.
 <br>
 <br>Römer 8:38, 39
-<br><br>Mehr Info.<br>1 Joh 2:2 und 1 Joh 4:14<br>„Und er ist die Sühnung für unsere Sünden, und nicht nur für unsere, sondern auch für die Sünden der ganzen Welt.“<br>„Und wir haben gesehen und bezeugen, dass der Vater den Sohn gesandt hat, um der Retter der Welt zu sein.“<br>Laut Stron´s Nr. G2889 kann weltweit als „die himmlischen Heerscharen“ verstanden werden.<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Gott ist die Liebe.
+<br><br>Mehr Info.<br>Der erste Brief von Johannes
+<br> 2:2 ”Und er ist ein Sühnopfer für unsere Sünden, doch nicht nur für unsere, sondern auch für die der ganzen Welt.”
+<br>4:14 ”Außerdem haben wir selbst gesehen und bezeugen, dass der Vater seinen Sohn als Retter der Welt gesandt hat.”
+<br><br>Laut Stron´s Nr. G2889 kann weltweit als „die himmlischen Heerscharen“ verstanden werden.<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Gott ist die Liebe.
 <br>
 <br>Liebt einander.
 <br><br>Wünsche Ihnen allen Frieden, Frieden und Freiheit
