--- a/jesusransompolish.html
+++ b/jesusransompolish.html
@@ -383,7 +383,10 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <br><br>Albowiem jestem przekonany, że ani śmierć, ani życie, ani aniołowie, ani rządy, ani rzeczy teraźniejsze, ani rzeczy przyszłe, ani moce, ani wysokość, ani głębokość, ani żadne inne stworzenie nie zdoła nas oddzielić od miłości Bożej, która jest w Chrystusie Jezusie, naszym Panu.
 <br>
 <br>Rzymian 8:38, 39
-<br><br>Więcej informacji.<br>1 Jn 2:2 i 1 Jn 4:14<br>„A On jest przebłaganiem za nasze grzechy: i nie tylko za nasze, ale także za grzechy całego świata”.<br>„I widzieliśmy i świadczymy, że Ojciec posłał Syna, aby był Zbawicielem świata”.<br>Według Stron nie. G2889 można rozumieć jako „niebiańskie zastępy”.<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Bóg jest miłością.
+<br><br>Więcej informacji.<br>1 Jana
+<br>2:2 ”On jest ofiarą przebłagalną za nasze grzechy, i to nie tylko za nasze, ale także za grzechy całego świata.”
+<br> 4:14 ”W dodatku sami widzieliśmy i świadczymy, że Ojciec posłał swojego Syna jako wybawcę świata.”
+<br><br>Według Stron nie. G2889 można rozumieć jako „niebiańskie zastępy”.<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Bóg jest miłością.
 <br>
 <br>Miłowali.
 <br><br>Życzę pokoju, pokoju i wolności
