--- a/jesusransomrussian.html
+++ b/jesusransomrussian.html
@@ -383,7 +383,10 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <br><br>Я убеждён, что ни смерть, ни жизнь, ни ангелы, ни правительства, ни настоящее, ни предстоящее, ни силы, ни высота, ни глубина, ни какое-либо другое творение не смогут отделить нас от любви Бога, которая во Христе Иисусе, нашем Господе.
 <br>
 <br>Римлянам 8:38, 39
-<br><br>Больше информации.<br>1 Ин 2:2 и 1 Ин 4:14<br>«И Он есть умилостивление за грехи наши: и не только за наши, но и за грехи всего мира».<br>«И мы видели и свидетельствуем, что Отец послал Сына Спасителем мира».<br>Согласно номеру Строна. G2889 можно понимать как «воинства небесные».<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Бог есть любовь.
+<br><br>Больше информации.<br>1 Иоанна
+<br>2:2 ”Он — жертва примирения за наши грехи, и не только за наши, но и за грехи всего мира.”
+<br>4:14 ”И мы сами видели, что Отец послал своего Сына как спасителя мира, и свидетельствуем об этом.”
+<br><br>Согласно номеру Строна. G2889 можно понимать как «воинства небесные».<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Бог есть любовь.
 <br>
 <br>Любите друг друга.
 <br><br>Желаю вам всем мира, мира и свободы
