--- a/jesusransomspainish.html
+++ b/jesusransomspainish.html
@@ -381,7 +381,10 @@ div,span,h1,h2,h3,h4,h5,h6,p,blockquote,a,ol,ul,li,figcaption,textarea,input{fon
 <br><br>Porque estoy convencido de que ni muerte, ni vida, ni ángeles, ni gobiernos, ni cosas aquí ahora, ni cosas por venir, ni poderes, ni altura, ni profundidad, ni ninguna otra creación podrá separarnos del amor de Dios que está en Cristo Jesús nuestro Señor.
 <br>
 <br>Romanos 8:38, 39
-<br><br>Más información.<br>1 Juan 2:2 o 1 Juan 4:14<br>"Y él es la propiciación por nuestros pecados: y no solamente por los nuestros, sino también por los pecados de todo el mundo".<br>“Y nosotros hemos visto y testificamos que el Padre envió al Hijo para ser el Salvador del mundo”.<br>Según Stron´s no. G2889 mundo puede entenderse como "las huestes celestiales".<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Dios es amor.
+<br><br>Más información.<br>Primera Carta de Juan
+<br>2:2 ”Él es un sacrificio de reconciliación por nuestros pecados, pero no solo por los nuestros, sino también por los de todo el mundo.”
+<br>4:14 ”Además, nosotros mismos hemos visto que el Padre envió a su Hijo como salvador del mundo y damos testimonio de eso.”
+<br><br>Según Stron´s no. G2889 mundo puede entenderse como "las huestes celestiales".<br><br><a href="https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/" class="text-primary" target="_blank">https://www.blueletterbible.org/lexicon/g2889/kjv/tr/0-1/</a><br><br>Dios es amor.
 <br>
 <br>Amaos los unos a los otros.
 <br><br>Deseo a todos la Paz, la Paz y la Libertad
